--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/pertinent1/strapi-plugin-pertinent-pages.git"
+    "url": "https://github.com/syskin/strapi-plugin-pertinent-pages.git"
   },
   "dependencies": {},
   "author": {
